--- a/P1/src/shelter_detail_editable.html
+++ b/P1/src/shelter_detail_editable.html
@@ -394,7 +394,7 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                                     d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                             </svg>
                             <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                                <a href="./pet_detail.html">
+                                <a href="./pet_detail_shelter_view.html">
                                     <div class="relative w-full h-56">
                                         <img class="w-full h-full object-cover rounded-t-lg"
                                             src="./resources/pets/DunDun2.png" alt="" />
@@ -434,7 +434,7 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                             </svg>
                             <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
 
-                                <a href="./pet_detail.html">
+                                <a href="./pet_detail_shelter_view.html">
                                     <div class="relative w-full h-56">
                                         <img class="w-full h-full object-cover rounded-t-lg"
                                             src="./resources/pets/boston_terrier.jpg" alt="" />
@@ -474,7 +474,7 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                             </svg>
                             <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
 
-                                <a href="./pet_detail.html">
+                                <a href="./pet_detail_shelter_view.html">
                                     <div class="relative w-full h-56">
                                         <img class="w-full h-full object-cover rounded-t-lg"
                                             src="./resources/pets/cat.jpg" alt="" />
@@ -514,7 +514,7 @@ If you have any questions, feel free to visit us or call us at 416-123-1234</tex
                             </svg>
                             <div class="transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
 
-                                <a href="./pet_detail.html">
+                                <a href="./pet_detail_shelter_view.html">
                                     <div class="relative w-full h-56">
                                         <img class="w-full h-full object-cover rounded-t-lg"
                                             src="./resources/pets/australian_terrier.png" alt="" />
