--- a/P1/src/shelter_detail_shelter_view.html
+++ b/P1/src/shelter_detail_shelter_view.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <script src="./nav_login_seeker.js"></script>
+    <script src="./nav_login_shelter.js"></script>
     <div class="flex flex-col justify-center items-center bg-gray-100">
 
         <div
