--- a/P1/src/user_application.html
+++ b/P1/src/user_application.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <script src="./nav_signin.js"></script>
+    <script src="./nav_login_seeker.js"></script>
 
     <div class="flex flex-col justify-center items-center bg-gray-100">
         <div class="flex justify-center items-center p-3">
@@ -36,10 +36,10 @@
         </div>
 
 
-        <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 m-5"
+        <nav class="flex flex-col md:flex-row px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 m-5"
             aria-label="Breadcrumb">
-            <ol class="inline-flex items-center space-x-1 md:space-x-3 justify-start">
-                <li class="inline-flex items-center">
+            <ol class="flex flex-wrap items-center space-x-1 md:space-x-3 justify-start">
+                <li class="mb-1 md:mb-0">
                     <a href="main/main_after_login.html"
                         class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
                         <svg class="w-3 h-3 mr-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -50,7 +50,7 @@
                         Home
                     </a>
                 </li>
-                <li>
+                <li class="mb-1 md:mb-0">
                     <div class="flex items-center">
                         <svg class="w-3 h-3 mx-1 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="none" viewBox="0 0 6 10">
@@ -62,7 +62,7 @@
                             of Applications</a>
                     </div>
                 </li>
-                <li>
+                <li class="mb-1 md:mb-0">
                     <div class="flex items-center">
                         <svg class="w-3 h-3 mx-1 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             fill="none" viewBox="0 0 6 10">
@@ -78,12 +78,15 @@
         </nav>
 
 
-        <div class="m-4">
+
+        <div class="ml-4 mr-4 mb-4" style="max-width: 100%;">
             <div class="grid-cols-1 sm:grid md:grid-cols-1 p-4">
-                <button type="button"
-                    class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800"
-                    style="height: fit-content;" data-te-ripple-init id="liveChatButton">Open
-                    Chat</button>
+                <div class="flex justify-center">
+                    <button type="button"
+                        class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800"
+                        style="height: fit-content;" data-te-ripple-init id="liveChatButton">Open
+                        Chat</button>
+                </div>
                 <section id="chatbox" class="hidden">
                     <div class="container">
                         <div class="bg-gray-200 rounded-lg">
@@ -178,15 +181,15 @@
                     });
                 });
             </script>
-
             </section>
+
             <div>
                 <section id="application">
                     <form action="https://postman-echo.com/post" class="form">
                         <div class="flex text-4xl justify-center p-3" style="color: red;">
                             Application in Review
                         </div>
-                        <div class="bg-white border border-gray-200 p-1 rounded-lg m-4">
+                        <div class="bg-white border border-gray-200 p-1 rounded-lg m-4" style="max-width: 100%;">
                             <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4">
                                 <label for="pet_name" class="mt-1 p-2 block font-bold text-gray-700">Name of Pet You
                                     Wish to
@@ -342,14 +345,14 @@
                                     class="block mt-1 p-2 font-bold text-gray-700 mr-4">Signature<span
                                         class="text-red-500">*</span></label>
                                 <input type="text" id="signature" name="signature"
-                                    class="block mt-1 p-2 w-full border rounded-md" style="width: 250px;"
+                                    class="block mt-1 p-2 w-full border rounded-md" style="width: 100%;"
                                     value="Sean Song" readonly>
                             </div>
                         </div>
                     </form>
                 </section>
 
-                <div class="grid-cols-1 sm:grid md:grid-cols-1 gap-4 ml-80 mr-80 mb-10">
+                <div class="flex justify-center">
                     <button type="button"
                         class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Withdraw
                         Application</button>
@@ -359,59 +362,7 @@
 
     </div>
 
-    <!-- Footer (You can customize it as needed) -->
-    <footer class="bg-gray-200 rounded-lg shadow" style="width: 100%;">
-        <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0">
-                    <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" /> -->
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap">Pet Pal</span>
-                </a>
-                <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 ">
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
-                    </li>
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="#" class="mr-4 hover:underline md:mr-6 ">Licensing</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/"
-                        class="hover:underline">
-                        PetPal™</a>. All Rights Reserved.
-                </span>
-                <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
-                    <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            fill="currentColor" viewBox="0 0 8 19">
-                            <path fill-rule="evenodd"
-                                d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Facebook page</span>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                            fill="currentColor" viewBox="0 0 20 17">
-                            <path fill-rule="evenodd"
-                                d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Twitter page</span>
-                    </a>
-
-                </div>
-            </div>
-        </div>
-    </footer>
+    <script src="./footer_seeker.js"></script>
     </div>
 </body>
 
