Make things consistent with cards

--- a/P1/src/main.html
+++ b/P1/src/main.html
@@ -68,7 +68,7 @@
         <div class="max-w-screen-xl flex flex-wrap justify-center mx-auto p-6 md:px-8 container">
             <div class="grid grid-cols-1 gap-5 md:gap-8 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-4">
                 <!-- Card 1 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -88,17 +88,16 @@
                         <p class="text-medium text-gray-700">
                             Male &#8226 3 years </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Golden Doodle </p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 31, 2023 </p>
+                            December 31, 2022 </p>
                     </div>
                 </div>
 
                 <!-- Card 2 -->
-                
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -122,12 +121,12 @@
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 31, 2023 </p>
+                            December 30, 2022 </p>
                     </div>
                 </div>
 
                 <!-- Card 3 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -145,18 +144,18 @@
                             </div>
                         </div>
                         <p class="text-medium text-gray-700">
-                            Male &#8226 3 years </p>
+                            Male &#8226 12 months </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Siberian </p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 31, 2023 </p>
+                            December 29, 2022 </p>
                     </div>
                 </div>
 
                 <!-- Card 4 -->
-                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg 
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
                     <a href="./pet_detail.html">
                         <div class="relative w-full h-56">
@@ -174,13 +173,13 @@
                             </div>
                         </div>
                         <p class="text-medium text-gray-700">
-                            Male &#8226 3 years </p>
+                            Male &#8226 6 years </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Australian Terrier</p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 31, 2023 </p>
+                            December 28, 2022 </p>
                     </div>
                 </div>
             </div>
