--- a/P1/src/shelter_detail_user_view.html
+++ b/P1/src/shelter_detail_user_view.html
@@ -290,127 +290,123 @@
                         </div>
                     </div>
 
-                    <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
-                        <!-- Card 1 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
+                <div class="gap-4 mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
+                <!-- Card 1 -->
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg"
-                                        src="./resources/pets/DunDun2.png" alt="" />
-                                </div>
+                    <a href="./pet_detail.html">
+                        <div class="relative w-full h-56">
+                            <img class="w-full h-full object-cover rounded-t-lg"
+                                src="./resources/pets/DunDun2.png" alt="" />
+                        </div>
+                    </a>
+                    <div class="p-5 flex flex-col">
+                        <div class="flex justify-between">
+                            <a href="#">
+                                <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">DunDun</h5>
                             </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">DunDun</h5>
-                                    </a>
-                                    <div>
-                                        <span
-                                            class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
-                                    </div>
-                                </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 3 years </p>
-                                <p class="text-medium text-gray-700">
-                                    Boston Terrier </p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 28, 2022 </p>
+                            <div>
+                                <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
                             </div>
                         </div>
-
-                        <!-- Card 2 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
-                            transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg"
-                                        src="./resources/pets/boston_terrier.jpg" alt="" />
-                                </div>
-                            </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Terry</h5>
-                                    </a>
-                                    <div>
-                                        <span
-                                            class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
-                                    </div>
-                                </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 3 years </p>
-                                <p class="text-medium text-gray-700">
-                                    Boston Terrier </p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 28, 2022 </p>
-                            </div>
-                        </div>
-
-                        <!-- Card 3 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
-                            transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg" src="./resources/pets/cat.jpg"
-                                        alt="" />
-                                </div>
-                            </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Betsy</h5>
-                                    </a>
-                                    <div>
-                                        <span
-                                            class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
-                                    </div>
-                                </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 3 years </p>
-                                <p class="text-medium text-gray-700">
-                                    Boston Terrier </p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 29, 2022 </p>
-                            </div>
-                        </div>
-
-                        <!-- Card 4 -->
-                        <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg  mb-2
-                            transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
-                            <a href="./pet_detail.html">
-                                <div class="relative w-full h-56">
-                                    <img class="w-full h-full object-cover rounded-t-lg"
-                                        src="./resources/pets/australian_terrier.png" alt="" />
-                                </div>
-                            </a>
-                            <div class="p-5 flex flex-col">
-                                <div class="flex justify-between">
-                                    <a href="#">
-                                        <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Buddy</h5>
-                                    </a>
-                                    <div>
-                                        <span
-                                            class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
-                                    </div>
-                                </div>
-                                <p class="text-medium text-gray-700">
-                                    Male &#8226 3 years </p>
-                                <p class="text-medium text-gray-700">
-                                    Boston Terrier </p>
-                                <p class="text-medium text-gray-700">
-                                    Toronto Adoption Center </p>
-                                <p class="text-xs mt-2  text-gray-700">
-                                    December 31, 2022 </p>
-                            </div>
-                        </div>
+                        <p class="text-medium text-gray-700">
+                            Male &#8226 3 years </p>
+                        <p class="text-medium text-gray-700">
+                            Golden Doodle </p>
+                        <p class="text-medium text-gray-700">
+                            Toronto Adoption Center </p>
+                        <p class="text-xs mt-2  text-gray-700">
+                            December 31, 2022 </p>
                     </div>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
+                            transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
+                    <a href="./pet_detail.html">
+                        <div class="relative w-full h-56">
+                            <img class="w-full h-full object-cover rounded-t-lg"
+                                src="./resources/pets/boston_terrier.jpg" alt="" />
+                        </div>
+                    </a>
+                    <div class="p-5 flex flex-col">
+                        <div class="flex justify-between">
+                            <a href="#">
+                                <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Terry</h5>
+                            </a>
+                            <div>
+                                <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                            </div>
+                        </div>
+                        <p class="text-medium text-gray-700">
+                            Male &#8226 3 years </p>
+                        <p class="text-medium text-gray-700">
+                            Boston Terrier </p>
+                        <p class="text-medium text-gray-700">
+                            Toronto Adoption Center </p>
+                        <p class="text-xs mt-2  text-gray-700">
+                            December 30, 2022 </p>
+                    </div>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
+                            transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
+                    <a href="./pet_detail.html">
+                        <div class="relative w-full h-56">
+                            <img class="w-full h-full object-cover rounded-t-lg"
+                                src="./resources/pets/cat.jpg" alt="" />
+                        </div>
+                    </a>
+                    <div class="p-5 flex flex-col">
+                        <div class="flex justify-between">
+                            <a href="#">
+                                <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Betsy</h5>
+                            </a>
+                            <div>
+                                <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                            </div>
+                        </div>
+                        <p class="text-medium text-gray-700">
+                            Male &#8226 12 months </p>
+                        <p class="text-medium text-gray-700">
+                            Siberian </p>
+                        <p class="text-medium text-gray-700">
+                            Toronto Adoption Center </p>
+                        <p class="text-xs mt-2  text-gray-700">
+                            December 29, 2022 </p>
+                    </div>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
+                            transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
+                    <a href="./pet_detail.html">
+                        <div class="relative w-full h-56">
+                            <img class="w-full h-full object-cover rounded-t-lg"
+                                src="./resources/pets/australian_terrier.png" alt="" />
+                        </div>
+                    </a>
+                    <div class="p-5 flex flex-col">
+                        <div class="flex justify-between">
+                            <a href="#">
+                                <h5 class="mb-2 text-xl font-semibold tracking-tight text-gray-900">Buddy</h5>
+                            </a>
+                            <div>
+                                <span class="bg-green-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded">Available</span>
+                            </div>
+                        </div>
+                        <p class="text-medium text-gray-700">
+                            Male &#8226 6 years </p>
+                        <p class="text-medium text-gray-700">
+                            Australian Terrier</p>
+                        <p class="text-medium text-gray-700">
+                            Toronto Adoption Center </p>
+                        <p class="text-xs mt-2  text-gray-700">
+                            December 28, 2022 </p>
+                    </div>
+                </div>
+                </div>
 
                     <div class="my-4 flex flex-col items-center md:flex-col-reverse md:items-end">
                         <nav aria-label="Pagination">
