--- a/P1/src/list_seeker_applications.html
+++ b/P1/src/list_seeker_applications.html
@@ -60,23 +60,13 @@
                                     <div class="flex flex-col items-start justify-center">
                                         <p class="text-sm font-medium  text-gray-900 truncate dark:text-white">
                                             Application to:
-                                        </p>
-                                        <div class="flex justify-center items-center p-3">
-                                            <a href="shelter_detail_user_view.html" class="relative flex justify-center text-center items-center transform transition duration-300 hover:scale-105">
-                                                <div class="rounded-full w-[10px] h-[10px] mr-1 mb-1">
-                                                    <img src="resources/shelter/shelter_logo.png">
-                                                </div>
-                                                <h1 class="text-sm w-min md:w-auto">Toronto Adoption Center</h1>
-                                                <div class="relative self-start ml-1">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
-                                                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" />
-                                                    </svg>
-                                                </div>
+                                            <a href="shelter_detail_user_view.html">
+                                                <span> Toronto Adoption Center</span>
                                             </a>
-                                        </div>
+                                        </p>
                                         <div>
                                             <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                                Created: December 31, 2023</p>
+                                                Created: Oct 10, 2023</p>
                                         </div>
                                     </div>
                                 </div>
@@ -110,11 +100,11 @@
                 <p class="text-medium text-gray-700">
                     Male &#8226 3 years </p>
                 <p class="text-medium text-gray-700">
-                    Boston Terrier </p>
+                    Golden Doodle </p>
                 <p class="text-medium text-gray-700">
                     Toronto Adoption Center </p>
                 <p class="text-xs mt-2  text-gray-700">
-                    December 31, 2023 </p>
+                    December 31, 2022 </p>
             </div>
         </div>
     </div>
