--- a/P1/src/list_shelter_applications.html
+++ b/P1/src/list_shelter_applications.html
@@ -61,7 +61,7 @@
                                         </p>
 
                                         <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                                            Created: December 31, 2023</p>
+                                            Created: Oct 10, 2023</p>
                                     </div>
                                 </div>
                                 <div class="flex justify-self-end "> <a href="shelter_application.html" type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"> View application</a>
@@ -96,11 +96,11 @@
                 <p class="text-medium text-gray-700">
                     Male &#8226 3 years </p>
                 <p class="text-medium text-gray-700">
-                    Boston Terrier </p>
+                    Golden Doodle </p>
                 <p class="text-medium text-gray-700">
                     Toronto Adoption Center </p>
                 <p class="text-xs mt-2  text-gray-700">
-                    December 31, 2023 </p>
+                    December 31, 2022 </p>
             </div>
         </div>
     </div>
