--- a/P1/src/search.html
+++ b/P1/src/search.html
@@ -178,7 +178,7 @@
 
             <div class="md:grow px-8 pt-4  bg-white">
                 <!-- May or may not need pagination -->
-                <div class="gap-4 flex flex-row flex-wrap justify-between items-center md:items-end">
+                <div class="flex flex-row flex-wrap justify-between items-center md:items-end">
                     <div class="flex flex-row items-center gap-x-4">
                         <button id="showDrawer"  class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700"type="button" aria-controls="drawer-disabled-backdrop">
 
@@ -204,7 +204,7 @@
                     </div>
                 </div>
 
-                <div class="mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
+                <div class="gap-4 mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 ">
                 <!-- Card 1 -->
                 <div class="max-h-max max-w-xs md:max-w-sm bg-white shadow rounded-lg mb-2
                             transition duration-300 ease-in-out hover:shadow-lg hover:opacity-80">
@@ -226,11 +226,11 @@
                         <p class="text-medium text-gray-700">
                             Male &#8226 3 years </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Golden Doodle </p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 28, 2022 </p>
+                            December 31, 2022 </p>
                     </div>
                 </div>
 
@@ -259,7 +259,7 @@
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 28, 2022 </p>
+                            December 30, 2022 </p>
                     </div>
                 </div>
 
@@ -282,9 +282,9 @@
                             </div>
                         </div>
                         <p class="text-medium text-gray-700">
-                            Male &#8226 3 years </p>
+                            Male &#8226 12 months </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Siberian </p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
@@ -311,13 +311,13 @@
                             </div>
                         </div>
                         <p class="text-medium text-gray-700">
-                            Male &#8226 3 years </p>
+                            Male &#8226 6 years </p>
                         <p class="text-medium text-gray-700">
-                            Boston Terrier </p>
+                            Australian Terrier</p>
                         <p class="text-medium text-gray-700">
                             Toronto Adoption Center </p>
                         <p class="text-xs mt-2  text-gray-700">
-                            December 31, 2022 </p>
+                            December 28, 2022 </p>
                     </div>
                 </div>
                 </div>
@@ -339,7 +339,7 @@
         </div>
     </div>
 
-    <footer class="bg-gray-200 rounded-lg shadow">
+    <footer class="bg-gray-200 rounded-lg shadow ">
         <div class="w-full max-w-screen-xl mx-auto p-4 py-8 lg:py-12 lg:pb-16">
             <div class="sm:flex sm:items-center sm:justify-between">
                 <a href="./main_after_login.html" class="flex items-center mb-4 sm:mb-0">
